--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,10 @@
     <title>ThreeJS Starter</title>
 </head>
 <body>
-    <canvas class="webgl"></canvas>
+    <canvas class="webgl" id="canvas"></canvas>
+    <div id="Links">
+      <a href="https://github.com/woahwinzeler">Owen Winzeler</a>
+      <a href="https://www.instagram.com/alsart1.61/">Alex Wilson</a>
+    </div>
 </body>
 </html>
