--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
       <a href="https://github.com/woahwinzeler">Owen Winzeler</a>
       <a href="https://www.instagram.com/alsart1.61/">Alex Wilson</a>
     </div>
+    <div id="info">Use your mouse to navigate around, use the up and down keys to tranistion experiences</div>
 </body>
 </html>
