--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>The Wheel</title>
     <script defer="defer" src="./dist/bundle.6a4588a688c6de0eac7d.js"> </script>
     <link href="./dist/main.css" rel="stylesheet">
+    <script>
+      window.addEventListener("DOMContentLoaded", () => {
+        let button = document.getElementById("close")
+        button.addEventListener("click", (e) => {
+          e.preventDefault();
+          let modal = document.getElementById("modal")
+          modal.className = "hidden"; 
+        })
+      })
+    </script>
 </head>
 <body>
     <canvas class="webgl" id="canvas"></canvas>
@@ -13,6 +23,13 @@
       <a href="https://github.com/woahwinzeler">Owen Winzeler</a>
       <a href="https://www.instagram.com/alsart1.61/">Alex Wilson</a>
     </div>
-    <div id="info">Use your mouse to navigate around, use the up and down keys to tranistion experiences</div>
+    <div id="info">Use your mouse to navigate around, use the up and down keys to tranistion experiences
+      <div id="modal">
+        <div id="text">
+          <strong> The Wheel </strong> is a projection of an image onto a particle map. Using openGL and my knowledge of the graphics pipleline, I used a vertex shader to set the position of the particles in refrence to the rest of the image, allowing for effceient rotation and manipulation of individaul particles. I used a fragment shader to color the particles.
+        </div>
+        <button id="close"> close </button> 
+      </div>
+    </div>
 </body>
 </html>
