fixed github pages, hopefully

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Wheel</title>
-    <script defer="defer" src="./dist/bundle.6a4588a688c6de0eac7d.js"> </script>
-    <link href="./dist/main.css" rel="stylesheet">
+    <script defer="defer" src="./src/script.js"> </script>
+    <link href="./src/style.css" rel="stylesheet">
     <script>
       window.addEventListener("DOMContentLoaded", () => {
         let button = document.getElementById("close")
