fixed github pages

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div id="info">Use your mouse to navigate around, use the up and down keys to tranistion experiences
       <div id="modal">
         <div id="text">
-          <strong> The Wheel </strong> is a projection of an image onto a particle map. Using openGL and my knowledge of the graphics pipleline, I used a vertex shader to set the position of the particles in refrence to the rest of the image, allowing for effceient rotation and manipulation of individaul particles. I used a fragment shader to color the particles.
+          <strong> The Wheel </strong> is a projection of an image onto a particle map. Using openGL and my knowledge of the graphics pipleline, I used a vertex shader to set the position of the particles in refrence to the rest of the image, allowing for effceient rotation and manipulation of individual particles. I used a fragment shader to color the particles.
         </div>
         <button id="close"> close </button> 
       </div>
