--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="0; url=./">
     <title>The Wheel</title>
     <script defer="defer" src="./src/script.js"> </script>
     <link href="./src/style.css" rel="stylesheet">
